[package]
name = "prc-rs"
version = "1.4.0"
authors = [
    "BenHall-7 <benjaminjahall@gmail.com>",
    "jam1garner <jam1.mcleod@hotmail.com>",
]
description = "Library for working with PRC types in Smash Ultimate"
license = "MIT"
repository = "https://github.com/ultimate-research/prc-rs"
edition = "2018"

[lib]
name = "prc"
path = "src/lib.rs"

[features]
xml-feat = ["quick-xml"]
kdl-feat = ["kdl"]
indexmap-std = ["indexmap/std"]

[dependencies]
byteorder = "1.3"
hash40 = "1.1"
indexmap = "1.2"
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.18.1", optional = true }
kdl = { version = "4.3", optional = true }

[workspace]
members = ["param-xml", "param-kdl"]
