[package]
name = "prc-rs"
version = "1.5.2"
authors = [
    "BenHall-7 <benjaminjahall@gmail.com>",
    "jam1garner <jam1.mcleod@hotmail.com>",
]
description = "Library for working with PRC types in Smash Ultimate"
license = "MIT"
repository = "https://github.com/ultimate-research/prc-rs"
edition = "2018"

[lib]
name = "prc"
path = "src/lib.rs"

[features]
xml-feat = ["quick-xml"]
indexmap-std = ["indexmap/std"]

[dependencies]
byteorder = "1.3"
hash40 = "1.1"
indexmap = "1.2"
prc-rs-derive = "0.1.2"
quick-xml = { version = "0.18.1", optional = true }
serde = { version = "1", features = ["derive"] }

[workspace]
members = ["param-xml"]
