[package]
name = "param-kdl"
version = "1.0.0"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
description = "Application for converting Smash Ultimate param files to XML and back"
license = "MIT"
repository = "https://github.com/ultimate-research/prc-rs"
edition = "2018"

[dependencies]
structopt = "0.3"
prc-rs = { version = "1.3", path = "..", features = ["kdl-feat"] }
