[package]
name = "param-xml"
version = "1.0.0"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
description = "Application for converting Smash Ultimate param files to XML and back"
license = "MIT"
license-file = "../LICENSE"
repository = "https://github.com/ultimate-research/prc-rs"
edition = "2018"

[dependencies]
structopt = "0.3"
prc-rs = { version = "1.3", features = ["xml"] }