[package]
name = "param-xml"
version = "1.1.0"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
description = "Application for converting Smash Ultimate param files to XML and back"
license = "MIT"
repository = "https://github.com/ultimate-research/prc-rs"
edition = "2018"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
prc-rs = { version = "1.4", path = "..", features = ["xml-feat"] }
